# Lab_5_python_tech

./: .gitignore  README.md  pyproject.toml  Отчет_AкимовaAA_6303.docx
data/plots/: extra_categorical_quality_metrics.csv  extra_normalization_report.txt  variant2_results.csv
src/metetl/: __init__.py  __main__.py  cli.py  decorators.py  logging_config.py
src/metetl/analysis/: __init__.py  aggregations.py  data_to_download.py
src/metetl/images/: __init__.py  models.py  processing.py
tests/: test_artwork.py  test_image_processor.py
